Removed the scrollbar to fix the bug in Firefox.

--- a/assets/css/Rogue-19.css
+++ b/assets/css/Rogue-19.css
@@ -1,8 +1,10 @@
 html,body,canvas {
 	margin: 0;
 	padding: 0;
-	cursor: crosshair;
+	/* cursor: crosshair; */
+	cursor: none;
 	height: 100%;
+	overflow: hidden;
 }
 
 body {
